Extended max-width Stopped table data from wrapping

--- a/css/xui.css
+++ b/css/xui.css
@@ -3491,6 +3491,7 @@ select:-webkit-autofill:focus {
 .xui-table tr th,
 .xui-table tr td {
   padding: .75rem 1rem;
+  white-space: nowrap;
 }
 
 .xui-table.xui-table-left tr th {
@@ -7370,6 +7371,46 @@ select:-webkit-autofill:focus {
 
 .xui-max-w-1000 {
   max-width: 1000px !important;
+}
+
+.xui-max-w-1100 {
+  max-width: 1100px !important;
+}
+
+.xui-max-w-1200 {
+  max-width: 1200px !important;
+}
+
+.xui-max-w-1300 {
+  max-width: 1300px !important;
+}
+
+.xui-max-w-1400 {
+  max-width: 1400px !important;
+}
+
+.xui-max-w-1500 {
+  max-width: 1500px !important;
+}
+
+.xui-max-w-1600 {
+  max-width: 1600px !important;
+}
+
+.xui-max-w-1700 {
+  max-width: 1700px !important;
+}
+
+.xui-max-w-1800 {
+  max-width: 1800px !important;
+}
+
+.xui-max-w-1900 {
+  max-width: 1900px !important;
+}
+
+.xui-max-w-2000 {
+  max-width: 2000px !important;
 }
 
 .xui-max-h-50 {
@@ -12274,6 +12315,46 @@ select:-webkit-autofill:focus {
     max-width: 1000px !important;
   }
 
+  .xui-sm-max-w-1100 {
+    max-width: 1100px !important;
+  }
+  
+  .xui-sm-max-w-1200 {
+    max-width: 1200px !important;
+  }
+  
+  .xui-sm-max-w-1300 {
+    max-width: 1300px !important;
+  }
+  
+  .xui-sm-max-w-1400 {
+    max-width: 1400px !important;
+  }
+  
+  .xui-sm-max-w-1500 {
+    max-width: 1500px !important;
+  }
+  
+  .xui-sm-max-w-1600 {
+    max-width: 1600px !important;
+  }
+  
+  .xui-sm-max-w-1700 {
+    max-width: 1700px !important;
+  }
+  
+  .xui-sm-max-w-1800 {
+    max-width: 1800px !important;
+  }
+  
+  .xui-sm-max-w-1900 {
+    max-width: 1900px !important;
+  }
+  
+  .xui-sm-max-w-2000 {
+    max-width: 2000px !important;
+  }
+
   .xui-sm-max-h-50 {
     max-height: 50px !important;
   }
@@ -16484,6 +16565,46 @@ select:-webkit-autofill:focus {
     max-width: 1000px !important;
   }
 
+  .xui-md-max-w-1100 {
+    max-width: 1100px !important;
+  }
+  
+  .xui-md-max-w-1200 {
+    max-width: 1200px !important;
+  }
+  
+  .xui-md-max-w-1300 {
+    max-width: 1300px !important;
+  }
+  
+  .xui-md-max-w-1400 {
+    max-width: 1400px !important;
+  }
+  
+  .xui-md-max-w-1500 {
+    max-width: 1500px !important;
+  }
+  
+  .xui-md-max-w-1600 {
+    max-width: 1600px !important;
+  }
+  
+  .xui-md-max-w-1700 {
+    max-width: 1700px !important;
+  }
+  
+  .xui-md-max-w-1800 {
+    max-width: 1800px !important;
+  }
+  
+  .xui-md-max-w-1900 {
+    max-width: 1900px !important;
+  }
+  
+  .xui-md-max-w-2000 {
+    max-width: 2000px !important;
+  }
+
   .xui-md-max-h-50 {
     max-height: 50px !important;
   }
@@ -20526,6 +20647,46 @@ select:-webkit-autofill:focus {
 
   .xui-lg-max-w-1000 {
     max-width: 1000px !important;
+  }
+
+  .xui-lg-max-w-1100 {
+    max-width: 1100px !important;
+  }
+  
+  .xui-lg-max-w-1200 {
+    max-width: 1200px !important;
+  }
+  
+  .xui-lg-max-w-1300 {
+    max-width: 1300px !important;
+  }
+  
+  .xui-lg-max-w-1400 {
+    max-width: 1400px !important;
+  }
+  
+  .xui-lg-max-w-1500 {
+    max-width: 1500px !important;
+  }
+  
+  .xui-lg-max-w-1600 {
+    max-width: 1600px !important;
+  }
+  
+  .xui-lg-max-w-1700 {
+    max-width: 1700px !important;
+  }
+  
+  .xui-lg-max-w-1800 {
+    max-width: 1800px !important;
+  }
+  
+  .xui-lg-max-w-1900 {
+    max-width: 1900px !important;
+  }
+  
+  .xui-lg-max-w-2000 {
+    max-width: 2000px !important;
   }
 
   .xui-lg-max-h-50 {
@@ -24902,6 +25063,46 @@ select:-webkit-autofill:focus {
 
   .xui-xl-max-w-1000 {
     max-width: 1000px !important;
+  }
+
+  .xui-xl-max-w-1100 {
+    max-width: 1100px !important;
+  }
+  
+  .xui-xl-max-w-1200 {
+    max-width: 1200px !important;
+  }
+  
+  .xui-xl-max-w-1300 {
+    max-width: 1300px !important;
+  }
+  
+  .xui-xl-max-w-1400 {
+    max-width: 1400px !important;
+  }
+  
+  .xui-xl-max-w-1500 {
+    max-width: 1500px !important;
+  }
+  
+  .xui-xl-max-w-1600 {
+    max-width: 1600px !important;
+  }
+  
+  .xui-xl-max-w-1700 {
+    max-width: 1700px !important;
+  }
+  
+  .xui-xl-max-w-1800 {
+    max-width: 1800px !important;
+  }
+  
+  .xui-xl-max-w-1900 {
+    max-width: 1900px !important;
+  }
+  
+  .xui-xl-max-w-2000 {
+    max-width: 2000px !important;
   }
 
   .xui-xl-max-h-50 {
